CodeStrings passed to Disassembler::decode are ignored

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b22

      A likely consequence of JDK-8213084, CodeStrings passed directly to Disassembler::decode are ignored.

      For example, -XX:+PrintInterpreter (on debug builds) included messages which can help in reading the code:

        0x00007f1f7093becb: je 0x00007f1f7093bee5
       ;; call_VM_base: heap base corrupted? <--- gone
        0x00007f1f7093bed1: mov $0x7f1f90c7ecb8,%rdi
        0x00007f1f7093bedb: and $0xfffffffffffffff0,%rsp
        0x00007f1f7093bedf: callq 0x00007f1f9046c0a0 = MacroAssembler::debug64(char*, long, long*)

            Assignee:
            Claes Redestad
            Reporter:
            Claes Redestad
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: