8255208: CodeStrings passed to Disassembler::decode are ignored

Reviewed-by: kvn, iklam